# CIEL-_SOT_Agent

./: .gitignore  AGENT.md  AGENT1.md  AGENT3.md  CHANGELOG.md  CLAUDE.md  IMMUTABLE_CONTRACT.md  README.md  README_CANONICAL_V2.md  REPOSITORY_STRUCTURE_NOTES.md  agentcrossinfo.md  conftest.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/: AGENT1.md
.github/agents/: my-agent.agent.md
.github/workflows/: AGENT1.md  README.md  ci.yml  gh_repo_coupling.yml  package.yml  runtime_pipeline.yml
LaTeX/orbital_index/: relational_seed_orbit_solver_v0.tex
app/: package-lock.json  package.json
contracts/: PRODUCTION_READINESS_PROTOCOL.md
contracts/appendices/: AUDIT_APPENDIX_CIEL-_SOT_Agent.md
docs/: AGENT1.md  ARCHITECTURE.md  CIEL_DESKTOP_FIXED_ATTRIBUTE.md  CIEL_OMEGA_DEMO_INTEGRATION.md  CORE_ONLY_PIPELINE_BRANCH.md  INDEX.md  INDEX_CANONICAL_V2.md  INDEX_V2.md  MASTER_PLAN_4_ALL_AGENTS_ATTENTION.md  MASTER_PLAN_4_ALL_AGENTS_ATTENTION_SPACETIME_ADDENDUM.md  MASTER_PLAN_4_ALL_AGENTS_ATTENTION_SPACETIME_ADDENDUM_V2.md  OPERATIONS.md  ORBital_INTEGRATION_ADDENDUM.md  Orbitrary shifts.md  REPOSITORY_GUIDE_HUMAN.md
docs/analogies/: AGENT1.md  KEPLER_SUPERFLUID_ANALOGIES.md  RELATIONAL_ANALOGIES.md
docs/architecture/: CONFLICT_AUDIT_POST_MERGE.md  DOCS_INDEX_MD_REPLACEMENT.md  FINAL_IN_PLACE_SWITCH_PACKAGE.md  HYPERSPACE_INDEX_JSON_REPLACEMENT.md  INDEX_REGISTRY_YAML_REPLACEMENT.md  INTEGRATION_PATH_MIGRATION.md  IN_PLACE_SWITCH_CHECKLIST.md  LEGACY_MACHINE_MIRROR_POLICY.md  MACHINE_CANONICALIZATION_PLAN.md  MACHINE_CANONICALIZATION_PROGRESS.md  MACHINE_CANONICALIZATION_READINESS.md  POST_MERGE_RECONCILIATION.md  README.md  README_MD_REPLACEMENT.md  REPO_GEOMETRY_STATUS.md  V2_CANONICAL_SWITCH_PLAN.md  V2_CANONICAL_SWITCH_PROGRESS.md  V2_CANONICAL_SWITCH_READINESS.md
docs/desktop/: CIEL0_PROTOCOL_BINDING.md  CIEL_DESKTOP_BOOTSTRAP_ON_SOT.md  CIEL_DESKTOP_GLOBAL_BINDING.md  INDEX.md
docs/gui/: CIEL_GUI_IDENTITY_BRIEF_AND_UX_PHILOSOPHY.md
docs/integration/: CIEL_OMEGA_DEMO_INTEGRATION.md  MACHINE_AUTHORITY_SURFACE.md  ORBITAL_INFRASTRUCTURE_RULES.md  README.md  SAPIENS_SURFACE_BINDING.md
fix/: CHANGESET.md  README.md
fixes/: CIEL_runtime_stable.patch  README_apply_patch.md
governance/: AGENT.md  README.md
integration/: AGENT1.md  CANONICAL_SWITCH_CHECKLIST.yaml  CANONICAL_SWITCH_CHECKLIST_CURRENT.yaml  INTEGRATION_DATA_SPLIT_STATUS.md  MACHINE_AUTHORITY_V2.md  MIGRATION_INDEX_V2.md  __init__.py  couplings.json  gh_coupling_state.json  gh_live_registry.json  gh_upstreams.json  hyperspace_index.json  hyperspace_index_orbital.json  index_registry.yaml  index_registry_orbital.yaml  repository_registry.json
packaging/: README.md  install.bat  install.ps1  install.sh
scripts/: AGENT1.md  README.md  bootstrap_audio_orbital_and_catalog.py  bootstrap_audio_orbital_stack.py  build_definition_db_library.py  build_nonlocal_definition_edges.py  build_orbital_definition_registry.py  build_subsystem_sync_registry.py  ciel_memory_consolidator.py  ciel_memory_stop.py  export_orbital_registry_to_noema.py  generate_orbital_cards.py  htri_mini.py  normalize_definition_registry.py  resolve_orbital_semantics.py  run_audio_orbital_probe.py  run_gh_repo_coupling.py  run_index_validator_v2.py  run_integration_mirror_sync.py  run_orbital_bridge.py  run_orbital_global_pass.py  run_pipeline_maintenance.py  run_repo_phase_sync.py  run_sapiens_panel.py  snapshot_audio_orbital_stack.sh  verify_orbital_registry_integrity.py
src/: AGENT1.md  file_orbit_initial_registry_v2.csv
tests/: AGENT1.md  conftest.py  test_ciel_pipeline.py  test_control_panel_app.py  test_deb_e2e.py  test_durability.py  test_gh_coupling.py  test_gh_coupling_v2.py  test_gui.py  test_holonomic_normalizer.py  test_htri_matrix.py  test_index_validator.py  test_index_validator_v2.py  test_integration_mirror.py  test_linguistic_semantic_coupling.py  test_orbital_object_cards.py  test_orbital_registry_verifier.py  test_orbital_regression.py  test_orbital_runtime.py  test_packaging.py  test_phased_state.py  test_pipeline_audit.py  test_pipeline_maintenance.py  test_repo_phase.py  test_repository_machine_map.py  test_runtime_evidence_ingest.py  test_runtime_sync_integration.py  test_sapiens_client_packet.py  test_sapiens_panel.py  test_sapiens_panel_components.py  test_sapiens_persist_session.py  test_semantic_speech_bridge.py
(+2157 files in other folders)
